--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,20 @@
+.attitude-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.item-card-row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.item-card-row .item-card {
+  margin: 10px; /* Adjust the value as per your preference */
+}
+
+
 body {
   font-family: sans-serif;
 }
