--- a/public/style.css
+++ b/public/style.css
@@ -4,6 +4,22 @@
   align-items: center;
 }
 
+.patience-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.charisma-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.discipline-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .item-card-row {
   display: flex;
   flex-wrap: wrap;
