--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,8 @@
+body{
+  background-color: grey;
+}
+
+
 .attitude-container {
   display: flex;
   flex-direction: column;
@@ -51,4 +56,68 @@ nav a {
 form div {
   margin: 1em;
   display: inline-block;
+}
+.page-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 40px;
+  background-color: grey;
+  font-family: Arial, sans-serif;
+  color: black;
+}
+
+.title {
+  font-size: 45px;
+  font-weight: bold;
+  color: #333;
+  margin-bottom: 40px;
+  margin-top: -20px;
+}
+
+.subheader {
+  font-size: 24px;
+  color: #777;
+  margin-bottom: 40px;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 40px;
+  justify-items: center;
+}
+
+.grid-item {
+  background-color: #fff;
+  padding: 30px;
+  text-align: center;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  border: 2px solid #ccc;
+}
+
+.grid-item h3 {
+  font-size: 24px;
+  font-weight: bold;
+  color: #333;
+  margin-bottom: 10px;
+}
+
+.grid-item p {
+  font-size: 18px;
+  color: #666;
+}
+
+.grid-item:nth-child(odd) {
+  background-color: #f2f2f2;
+}
+
+.grid-item:nth-child(even) {
+  background-color: #e6e6e6;
+}
+
+.grid-item.shadow-border {
+  box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.2);
+  padding: 10px;
 }
