--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,5 @@
 body{
-  background-color: grey;
+  background-color: rgb(106, 173, 235);
 }
 
 
@@ -58,11 +58,12 @@ form div {
   display: inline-block;
 }
 .page-container {
+  max-height: 90%;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 40px;
-  background-color: grey;
+  background-color: rgb(106, 173, 235);
   font-family: Arial, sans-serif;
   color: black;
 }
